@@ -9,6 +9,10 @@
 Yang Tse (27 March 2007)
 - Internal function Curl_select() renamed to Curl_socket_ready()
 
+  New Internal wrapper function Curl_select() around select (2), it
+  uses poll() when a fine poll() is available, so now libcurl can be
+  built without select() support at all if a fine poll() is available.
+
 Daniel S (25 March 2007)
 - Daniel Johnson fixed multi code to traverse the easy handle list properly.
   A left-over bug from the February 21 fix.
